@@ -5,6 +5,8 @@
 Version 1.1.1 to be released
 ----------------------------
 - Bug #823: typo in CLinkColumn about linkHtmlOptions (Qiang)
+- Bug #18: Change the way CJuiDatePicker sets its language option (sebas)
+- Bug #14: Added documentation about the "js:" prefix in CJuiSortable (sebas)
 
 Version 1.1.0 January 10, 2010
 ------------------------------
